notes/bash/k8s/files/cert-manager/cert-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-passthrough: "false"
    ingress.kubernetes.io/secure-backends: "true"
  name: dev-ingress
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: www.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
  tls:
    - hosts:
        - www.example.com
      secretName: default-dev-example-tls
